--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,22 @@
 body{
-    background-color: lightgray;
+    background-image: url(../images/cv.png);
+    color: white;
 }
-p{
+h1{
+    color: white;
+}
+h2{
     font-size: 2em;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 5px;
+    border: 1px solid white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px black;
+}
+h3{
+    text-decoration: underline;
+}
+figure{
+    text-align: center;
 }
