--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
+@font-face{
+    font-family: "Roboto";
+    src: url("../fonts/Roboto/Roboto-Regular.ttf") format("truetype");
+}
 body{
     background-image: url(../images/cv.png);
     color: white;
+    font-family: Roboto;
 }
 h1{
     color: white;
 }
 h2{
     font-size: 2em;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding: 5px;
     border: 1px solid white;
