--- a/css/cv.css
+++ b/css/cv.css
@@ -4,23 +4,57 @@
 }
 body{
     background-image: url(../images/cv.png);
+    background-size: 10%;
     color: white;
     font-family: Roboto;
+    display: flex;
+    flex-direction: row;
+}
+nav{
+    text-align: center;;
+}
+div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+nav{
+    border: 2em solid black;
+    writing-mode: vertical-rl;
+}
+header{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+footer{
+    width: 80%;
+    text-align: center;
 }
 h1{
-    color: white;
+    text-align: center;
 }
 h2{
-    font-size: 2em;
     text-align: center;
-    padding: 5px;
-    border: 1px solid white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px black;
 }
 h3{
     text-decoration: underline;
 }
 figure{
     text-align: center;
+}
+section{
+    
+}
+.section{
+    border: 0.2em solid white;
+    border-radius: 1em;
+    box-shadow: 0.5em 0.5em 1em black;
+    padding: 0.5em;
+    background-color: black;
+    opacity: 0.9;
+    margin: 1%;
 }
